# sensbadge

./: .envrc  CMakeLists.txt  main.cpp  pico_sdk_import.cmake  pimoroni_pico_import.cmake
micropython/: .envrc  autobright.py  button_test.py  eh22.py  pride_badge.py  wavy_message.py
micropython/assets/: badge.afphoto
